--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "google-map-react": "^2.1.9",
     "moment": "^2.29.1",
     "next": "^10.0.4",
     "nodemailer": "^6.4.17",
@@ -19,6 +20,7 @@
     "heroku-postbuild": "npm run build"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.0",
     "@types/node": "^14.14.20",
     "typescript": "^4.1.3"
   }
