--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.0",
+    "react-material-ui-carousel": "^2.1.2",
     "react-slick": "^0.27.13",
     "slick-carousel": "^1.8.1",
     "typeface-playfair-display": "^1.1.13"
