--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "google-map-react": "^2.1.9",
+    "medium-zoom": "^1.0.6",
     "moment": "^2.29.1",
     "next": "^10.0.4",
     "nodemailer": "^6.4.17",
